--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,13 +7,23 @@
 # Pull base image.
 FROM python:3.11.1-bullseye
 
+# Set user and group
+ARG user=ansible
+ARG group=ansible
+ARG work_path=ansible
 
-WORKDIR /data
-COPY ./ /data/
-
-## Images from oraclelinux:9
 RUN apt -y update && \
-    apt -y groupinstall "Development Tools";
+  apt -y install sudo && \
+  useradd ${user} && \
+  usermod -g sudo ${user};
+
+
+#USER ${user}:${group}
+
+WORKDIR /${work_path}
+COPY ./ /${work_path}/
+
+RUN sudo apt -y install build-essential;
 #    apt -y install bzip2-devel \
 #                   ncurses-devel \
 #                   libffi-devel \
@@ -25,6 +35,9 @@ RUN apt -y update && \
 RUN pip install -U -r requirements.txt;
 ## Install collection
 RUN ansible-galaxy collection install amazon.aws
+
+
+
 ## Define default command.
 ##CMD ["bash"]
 
