--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -9,6 +9,7 @@ asyncpg==0.27.0
 backcall==0.2.0
 beautifulsoup4==4.11.1
 black==22.12.0
+boto3==1.26.59
 bs4==0.0.1
 certifi==2022.12.7
 cffi==1.15.1
